--- a/views/login.html
+++ b/views/login.html
@@ -6,16 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="./css/login.css">
 </head>
 
 <body>
-    <h2>Login</h2>
-    <form id="loginForm">
-        <input type="text" id="username" placeholder="Username" required><br>
-        <input type="password" id="password" placeholder="Password" required><br>
-        <button type="submit">Login</button>
-    </form>
-    <p id="message"></p>
+    <div class="login-container">
+        <h2>Login</h2>
+        <form id="loginForm">
+            <label for="username">Username:</label>
+            <input type="text" id="username" placeholder="username" required>
+
+            <label for="password">Password:</label>
+            <input type="password" id="password" placeholder="password" required>
+
+            <div class="button-group">
+                <button type="submit" class="btn-login">Login</button>
+                <button type="button" class="btn-register" id="register">Register</button>
+            </div>
+        </form>
+        <p id="message"></p>
+    </div>
 
     <script>
         $(document).ready(function () {
@@ -41,7 +51,14 @@
                     }
                 })
             });
+
+
+            $("#register").click(function () {
+                window.location.href = "/signup";
+            });
         });
+
+
     </script>
 </body>
 
